--- a/index.html
+++ b/index.html
@@ -14,53 +14,12 @@
 <body>
     <header class="dFlex">
         <div class="navPages dFlex">
-            <a href="index.html"> <svg width="30px" height="30px" viewBox="0 0 24 24" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M22 12.2039V13.725C22 17.6258 22 19.5763 20.8284 20.7881C19.6569 22 17.7712 22 14 22H10C6.22876 22 4.34315 22 3.17157 20.7881C2 19.5763 2 17.6258 2 13.725V12.2039C2 9.91549 2 8.77128 2.5192 7.82274C3.0384 6.87421 3.98695 6.28551 5.88403 5.10813L7.88403 3.86687C9.88939 2.62229 10.8921 2 12 2C13.1079 2 14.1106 2.62229 16.116 3.86687L18.116 5.10812C20.0131 6.28551 20.9616 6.87421 21.4808 7.82274"
-                        stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
-                    <path d="M15 18H9" stroke="#1C274C" stroke-width="1.5" stroke-linecap="round" />
-                </svg></a>
-
-            <a href="projects.html"> <svg width="30px" height="30px" viewBox="0 0 24 24" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M7 11C8.10457 11 9 10.1046 9 9C9 7.89543 8.10457 7 7 7C5.89543 7 5 7.89543 5 9C5 10.1046 5.89543 11 7 11Z"
-                        stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                    <path d="M5.56055 21C11.1305 11.1 15.7605 9.35991 21.0005 15.7899" stroke="#000000"
-                        stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                    <path
-                        d="M11.5 3H5C3.93913 3 2.92172 3.42136 2.17157 4.17151C1.42142 4.92165 1 5.93913 1 7V17C1 18.0609 1.42142 19.0782 2.17157 19.8284C2.92172 20.5785 3.93913 21 5 21H17C18.0609 21 19.0783 20.5785 19.8284 19.8284C20.5786 19.0782 21 18.0609 21 17V11"
-                        stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                    <path
-                        d="M20.6 1.00003C20.008 1.00175 19.4377 1.2171 19 1.60422C18.6567 1.30103 18.23 1.10139 17.7719 1.02963C17.3138 0.957876 16.844 1.0171 16.42 1.20011C15.9959 1.38311 15.6359 1.68198 15.3838 2.06026C15.1316 2.43854 14.9983 2.87989 15 3.33048C15 6.11406 19 8 19 8C19 8 23 6.11406 23 3.33048C23 2.71241 22.7472 2.11966 22.2971 1.68261C21.847 1.24557 21.2365 1.00003 20.6 1.00003Z"
-                        stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                </svg></a>
-            <a href="#"> <svg width="30px" height="30px" viewBox="-0.5 0 25 25" fill="none"
-                    xmlns="http://www.w3.org/2000/svg">
-                    <path
-                        d="M22 10.56C22 9.49913 21.5786 8.48171 20.8284 7.73157C20.0783 6.98142 19.0609 6.56 18 6.56H6C4.93913 6.56 3.92178 6.98142 3.17163 7.73157C2.42149 8.48171 2 9.49913 2 10.56"
-                        stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                    <path
-                        d="M21.9999 10.56L20.9999 18.56C20.8507 19.6487 20.3192 20.649 19.5002 21.3818C18.6813 22.1146 17.6285 22.5322 16.5299 22.56H7.38989C6.29132 22.5322 5.23847 22.1146 4.41956 21.3818C3.60064 20.649 3.0691 19.6487 2.91992 18.56L1.91992 10.56"
-                        stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                    <path
-                        d="M8.00977 6.25C8.00977 5.18913 8.43119 4.17172 9.18134 3.42157C9.93148 2.67142 10.9489 2.25 12.0098 2.25C13.0706 2.25 14.0881 2.67142 14.8382 3.42157C15.5883 4.17172 16.0098 5.18913 16.0098 6.25"
-                        stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                </svg></a>
+            <a href="index.html" class="activea"> <i class="fa-solid fa-house activenav"></i></a>
+            <a href="projects.html"> <i class="fa-regular fa-images"></i></a>
+            <a href="#"> <i class="fa-solid fa-bag-shopping"></i></a>
         </div>
         <a href="" class="btngroup dFlex">
-            <svg width="20px" height="20px" viewBox="-0.5 0 25 25" fill="white" xmlns="http://www.w3.org/2000/svg">
-                <path
-                    d="M3 11.3201C3 8.93312 3.94822 6.64394 5.63605 4.95612C7.32387 3.26829 9.61305 2.32007 12 2.32007C14.3869 2.32007 16.6762 3.26829 18.364 4.95612C20.0518 6.64394 21 8.93312 21 11.3201"
-                    stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M3 11.3201C3 17.4201 9.76 22.3201 12 22.3201C14.24 22.3201 21 17.4201 21 11.3201"
-                    stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                <path d="M12 15.3201V7.32007" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
-                    stroke-linejoin="round" />
-                <path d="M8 11.3201H16" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
-                    stroke-linejoin="round" />
-            </svg>
+            <i class="fa-solid fa-plus"></i>
             Hire Me
         </a>
     </header>
@@ -74,10 +33,10 @@
                     Product Designer
                 </div>
                 <a href="contact.html" class="greenbtngr dFlex">
-                    <svg width="13px" height="13px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg width="8px" height="8px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="8" cy="8" r="8" fill="rgb(3, 151, 84)" />
                     </svg>
-                    AVAILABLE FOR WORK
+                    <span>AVAILABLE FOR WORK</span>
                 </a>
             </div>
             <div class="sectionstart col2">
@@ -87,21 +46,7 @@
                         hardworking individual who focuses on my projects.</p>
                     <div class="twobtns dFlex">
                         <a href="" class="btngroup dFlex">
-                            <svg width="20px" height="20px" viewBox="-0.5 0 25 25" fill="white"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M3 11.3201C3 8.93312 3.94822 6.64394 5.63605 4.95612C7.32387 3.26829 9.61305 2.32007 12 2.32007C14.3869 2.32007 16.6762 3.26829 18.364 4.95612C20.0518 6.64394 21 8.93312 21 11.3201"
-                                    stroke="#000000" stroke-width="1.5" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path
-                                    d="M3 11.3201C3 17.4201 9.76 22.3201 12 22.3201C14.24 22.3201 21 17.4201 21 11.3201"
-                                    stroke="#000000" stroke-width="1.5" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M12 15.3201V7.32007" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                                <path d="M8 11.3201H16" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
-                                    stroke-linejoin="round" />
-                            </svg>
+                            <i class="fa-solid fa-plus"></i>
                             Hire Me
                         </a>
                         <a href="" class="copyBtn dFlex">
@@ -116,7 +61,7 @@
                     </div>
                 </div>
                 <div class="img dFlex">
-                    <img src="media/Me.avif" alt="">
+                    <img src="media/me.jpg" alt="">
                 </div>
             </div>
         </section>
@@ -130,11 +75,11 @@
                 </div>
             </div>
             <div class="aboutContent dFlex">
-                <div class="image"> <img src="media/Me.avif" alt=""></div>
+                <div class="image"> <img src="media/me.jpg" alt=""></div>
                 <div href="" class="flexCol">
                     <div>
                         <p class="studyYear">2018-2020</p>
-                        <p><b>Matric</b> Govt. Post Graduate College</p>
+                        <p><b>Matric</b> Govt. MC High School</p>
                     </div>
                     <div>
                         <p class="studyYear">2021-2023</p>
@@ -182,8 +127,24 @@
                             </div>
                         </div>
                     </div>
+                    <div>
+                        <p><b>Bootstrap</b></p>
+                        <div class="progress">
+                            <div class="bar-4">
+                                <div class="percent">85%</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div>
+                        <p><b>Php</b></p>
+                        <div class="progress">
+                            <div class="bar-5">
+                                <div class="percent">55%</div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="image"> <img src="media/Me.avif" alt=""></div>
+                <div class="image"> <img src="media/me.jpg" alt=""></div>
 
             </div>
         </section>
@@ -192,18 +153,7 @@
             <p>Creating user experience and visual appealing design</p>
             <div class="twobtns dFlex">
                 <a href="" class="btngroup dFlex">
-                    <svg width="20px" height="20px" viewBox="-0.5 0 25 25" fill="white"
-                        xmlns="http://www.w3.org/2000/svg">
-                        <path
-                            d="M3 11.3201C3 8.93312 3.94822 6.64394 5.63605 4.95612C7.32387 3.26829 9.61305 2.32007 12 2.32007C14.3869 2.32007 16.6762 3.26829 18.364 4.95612C20.0518 6.64394 21 8.93312 21 11.3201"
-                            stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                        <path d="M3 11.3201C3 17.4201 9.76 22.3201 12 22.3201C14.24 22.3201 21 17.4201 21 11.3201"
-                            stroke="#000000" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                        <path d="M12 15.3201V7.32007" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
-                            stroke-linejoin="round" />
-                        <path d="M8 11.3201H16" stroke="#000000" stroke-width="1.5" stroke-linecap="round"
-                            stroke-linejoin="round" />
-                    </svg>
+                    <i class="fa-solid fa-plus"></i>
                     Hire Me
                 </a>
                 <a href="" class="copyBtn dFlex">
