--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <svg width="13px" height="13px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="8" cy="8" r="8" fill="#8080805e" />
                     </svg>
-                    Product Designer
+                    Front-End Developer
                 </div>
                 <a href="contact.html" class="greenbtngr dFlex">
                     <svg width="8px" height="8px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
