--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <svg width="13px" height="13px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="8" cy="8" r="8" fill="#8080805e" />
                     </svg>
-                    About - Education and Training
+                    About - Education
                 </div>
             </div>
             <div class="aboutContent dFlex">
@@ -172,7 +172,7 @@
                     <svg width="13px" height="13px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="8" cy="8" r="8" fill="#8080805e" />
                     </svg>
-                    Follw Me
+                    Follow Me
                 </div>
                 <div class="socials">
                     <a href=""><i class="fa-brands fa-x-twitter"></i></a>
