--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="image"> <img src="media/me.jpg" alt=""></div>
+                <div class="image"> <img src="media/skills.webp" alt=""></div>
 
             </div>
         </section>
