--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
             </div>
             <div class="aboutContent dFlex">
-                <div class="image"> <img src="media/me.jpg" alt=""></div>
+                <div class="image"> <img src="media/education.webp" alt=""></div>
                 <div href="" class="flexCol">
                     <div>
                         <p class="studyYear">2018-2020</p>
