--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <a href="projects.html"> <i class="fa-regular fa-images"></i></a>
             <a href="#"> <i class="fa-solid fa-bag-shopping"></i></a>
         </div>
-        <a href="" class="btngroup dFlex">
+        <a href="contact.html" class="btngroup dFlex">
             <i class="fa-solid fa-plus"></i>
             Hire Me
         </a>
@@ -46,7 +46,7 @@
                     <p>I am a student, a content creator, and a YouTuber. I strive for success, as I am a dedicated and
                         hardworking individual who focuses on my projects.</p>
                     <div class="twobtns dFlex">
-                        <a href="" class="btngroup dFlex">
+                        <a href="contact.html" class="btngroup dFlex">
                             <i class="fa-solid fa-plus"></i>
                             Hire Me
                         </a>
@@ -153,7 +153,7 @@
             <p class="whead">Let’s work together.</p>
             <p>Creating user experience and visual appealing design</p>
             <div class="twobtns dFlex">
-                <a href="" class="btngroup dFlex">
+                <a href="contact.html" class="btngroup dFlex">
                     <i class="fa-solid fa-plus"></i>
                     Hire Me
                 </a>
@@ -167,8 +167,8 @@
                 </a>
             </div>
         </section>
-        <footer class="flexCol">
-            <div class="socialSection dFlex " data-aos="fade-up">
+        <footer class="flexCol" data-aos="fade-up">
+            <div class="socialSection dFlex " >
                 <div class="lightbtngr dFlex">
                     <svg width="13px" height="13px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="8" cy="8" r="8" fill="#8080805e" />
@@ -182,7 +182,7 @@
                     <a href=""><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
-            <div class="copyright flexCol" data-aos="fade-up">
+            <div class="copyright flexCol" >
                 <p style="color: white; font-size: 1.8rem;">© 2024 Kaleemullah</p>
                 <p style="font-size: 1.5rem;">- Front-End Developer -</p>
             </div>
