--- a/contact.html
+++ b/contact.html
@@ -56,12 +56,12 @@
                         </a>
                     </div>
                 </div>
-                <form action="https://formsubmit.co/kaleemullahahsan0@gmail.com" method="POST" class="form flexCol"/>
+                <form action="https://formspree.io/f/xrbgzend" method="POST" class="form flexCol">
                     <div class="dFlex" style="gap: 1.5rem;">
                         <input type="text" name="" id="" placeholder="Name" name="name" required>
                         <input type="email" name="" id="" placeholder="Email Address" name="email" required>
                     </div>
-                    <textarea name="" id="" rows="6" placeholder="Message" Name="message" required></textarea>
+                    <textarea name="" id="" rows="6" placeholder="Message" name="message" required></textarea>
                     <button class="submit" type="submit">Submit</button>
                 </form>
             </div>
