--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
 <body>
     <header class="dFlex" data-aos="fade-down">
         <div class="navPages dFlex">
-            <a href="index.html" class="activea"> <i class="fa-solid fa-house activenav"></i></a>
+            <a href="index.html"> <i class="fa-solid fa-house"></i></a>
             <a href="projects.html"> <i class="fa-regular fa-images"></i></a>
             <a href="#"> <i class="fa-solid fa-bag-shopping"></i></a>
         </div>
@@ -45,7 +45,7 @@
                     <h1>Design Inquiry</h1>
                     <p>Got an idea and need design help? Reach out now.</p>
                     <div class="twobtns dFlex">
-                        <a href="" class="copyBtn dFlex">
+                        <a href="javascript:void(0);" class="copyBtn dFlex">
                             <svg width="30px" height="30px" viewBox="0 0 24 24" fill="none"
                                 xmlns="http://www.w3.org/2000/svg">
                                 <path
@@ -53,15 +53,16 @@
                                     stroke="#464455" stroke-linecap="round" stroke-linejoin="round" />
                             </svg>
                             Copy Email
-                        </a>
+                        </a>                        
                     </div>
                 </div>
-                <form action="https://formspree.io/f/xrbgzend" method="POST" class="form flexCol">
+                <form action="https://api.web3forms.com/submit" method="POST" class="form flexCol">
+                    <input type="hidden" name="access_key" value="c69deaa1-6b0b-4e8c-8feb-fb0a098c1439">
                     <div class="dFlex" style="gap: 1.5rem;">
-                        <input type="text" name="" id="" placeholder="Name" name="name" required>
-                        <input type="email" name="" id="" placeholder="Email Address" name="email" required>
+                        <input type="text" id="" placeholder="Name" name="name" required>
+                        <input type="email" id="" placeholder="Email Address" name="email" required>
                     </div>
-                    <textarea name="" id="" rows="6" placeholder="Message" name="message" required></textarea>
+                    <textarea id="" rows="6" placeholder="Message" name="message" required></textarea>
                     <button class="submit" type="submit">Submit</button>
                 </form>
             </div>
@@ -95,6 +96,8 @@
         duration: 1000,
     });
   </script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="jquery.js"></script>
 </body>
 
 </html>
