--- a/index.html
+++ b/index.html
@@ -189,6 +189,12 @@
             </div>
         </footer>
     </div>
+    <div class="whatsapp-contact">
+  <a href="https://wa.me/yourphonenumber" target="_blank">
+    <i class="fa-brands fa-whatsapp"></i>
+  </a>
+</div>
+
     <script src="jquery.js"></script>
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
