--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     </div>
     <div class="whatsapp-contact">
   <a href="https://wa.me/923212411667" target="_blank">
-    <i class="fa-brands fa-whatsapp"></i>
+    <i class="fa-brands fa-whatsapp dFlex"></i>
   </a>
 </div>
 
