--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             </div>
         </footer>
     </div>
-    <div class="whatsapp-contact">
+    <div class="whatsapp-contact"  data-aos="fade-left">
   <a href="https://wa.me/923212411667" target="_blank">
     <i class="fa-brands fa-whatsapp dFlex"></i>
   </a>
