--- a/index.html
+++ b/index.html
@@ -177,10 +177,10 @@
                     Follow Me
                 </div>
                 <div class="socials">
-                    <a href=""><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href=""><i class="fa-brands fa-instagram"></i></a>
-                    <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href=""><i class="fa-brands fa-github"></i></a>
+                    <a href="https://x.com/kaleemullahahsn?t=kAi_o7fIV7f-MqoQ1hQ7MQ&s=03"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.instagram.com/websynce/"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/kaleemullah-ahsan-5492aa256/"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://github.com/kaleemullahahsan"><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
             <div class="copyright flexCol" >
