--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <meta name="google-site-verification" content="MsYwyaRiYRDdMRu5hPMyU9jZGw_76bczlhMpF4abl6Q" />
 </head>
 
 <body>
