--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
       <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <meta name="google-site-verification" content="MsYwyaRiYRDdMRu5hPMyU9jZGw_76bczlhMpF4abl6Q" />
 </head>
 
 <body>
@@ -43,7 +42,7 @@
             </div>
             <div class="sectionstart col2">
                 <div class="texts">
-                    <h1>Hi, I’m Kaleemullah Ahsan</h1>
+                    <h1>Hi, I’m <span>Kaleemullah Ahsan</span></h1>
                     <p>I am a student, a content creator, and a YouTuber. I strive for success, as I am a dedicated and
                         hardworking individual who focuses on my projects.</p>
                     <div class="twobtns dFlex">
@@ -178,10 +177,10 @@
                     Follow Me
                 </div>
                 <div class="socials">
-                    <a href="https://x.com/kaleemullahahsn?t=kAi_o7fIV7f-MqoQ1hQ7MQ&s=03"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="https://www.instagram.com/websynce/"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="https://www.linkedin.com/in/kaleemullah-ahsan-5492aa256/"><i class="fa-brands fa-linkedin-in"></i></a>
-                    <a href="https://github.com/kaleemullahahsan"><i class="fa-brands fa-github"></i></a>
+                    <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href=""><i class="fa-brands fa-instagram"></i></a>
+                    <a href=""><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href=""><i class="fa-brands fa-github"></i></a>
                 </div>
             </div>
             <div class="copyright flexCol" >
@@ -190,12 +189,6 @@
             </div>
         </footer>
     </div>
-    <div class="whatsapp-contact"  data-aos="fade-left">
-  <a href="https://wa.me/923212411667" target="_blank">
-    <i class="fa-brands fa-whatsapp dFlex"></i>
-  </a>
-</div>
-
     <script src="jquery.js"></script>
       <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   <script>
