--- a/projects.html
+++ b/projects.html
@@ -16,10 +16,10 @@
     <header class="dFlex" data-aos="fade-down">
         <div class="navPages dFlex">
             <a href="index.html"> <i class="fa-solid fa-house"></i></a>
-            <a href="projects.html"> <i class="fa-regular fa-images"></i></a>
+            <a href="projects.html" class="activea"> <i class="fa-regular fa-images activenav"></i></a>
             <a href="#"> <i class="fa-solid fa-bag-shopping"></i></a>
         </div>
-        <a href="" class="btngroup dFlex">
+        <a href="contact.html" class="btngroup dFlex">
             <i class="fa-solid fa-plus"></i>
             Hire Me
         </a>
@@ -31,7 +31,7 @@
                     <svg width="13px" height="13px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="8" cy="8" r="8" fill="#8080805e" />
                     </svg>
-                    Hire Me
+                    My Projects
                 </div>
                 <a href="contact.html" class="greenbtngr dFlex">
                     <svg width="8px" height="8px" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -40,31 +40,17 @@
                     <span>AVAILABLE FOR WORK</span>
                 </a>
             </div>
-            <div class="sectionstart col2">
-                <div class="texts">
-                    <h1>Design Inquiry</h1>
-                    <p>Got an idea and need design help? Reach out now.</p>
-                    <div class="twobtns dFlex">
-                        <a href="javascript:void(0);" class="copyBtn dFlex">
-                            <svg width="30px" height="30px" viewBox="0 0 24 24" fill="none"
-                                xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M10 8V7C10 6.05719 10 5.58579 10.2929 5.29289C10.5858 5 11.0572 5 12 5H17C17.9428 5 18.4142 5 18.7071 5.29289C19 5.58579 19 6.05719 19 7V12C19 12.9428 19 13.4142 18.7071 13.7071C18.4142 14 17.9428 14 17 14H16M7 19H12C12.9428 19 13.4142 19 13.7071 18.7071C14 18.4142 14 17.9428 14 17V12C14 11.0572 14 10.5858 13.7071 10.2929C13.4142 10 12.9428 10 12 10H7C6.05719 10 5.58579 10 5.29289 10.2929C5 10.5858 5 11.0572 5 12V17C5 17.9428 5 18.4142 5.29289 18.7071C5.58579 19 6.05719 19 7 19Z"
-                                    stroke="#464455" stroke-linecap="round" stroke-linejoin="round" />
-                            </svg>
-                            Copy Email
-                        </a>                        
+            <div class="projectsSection">
+                <div class="col3">
+                    <a href="p1.html" class="flexCol project"><img src="media/project1.avif" alt="">
+                        <div class="flexCol">
+                        <p class="phead">Project 1</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse, architecto numquam, sequi amet animi distinctio nostrum volupt</p>
+                        <p style="font-size: 1.7rem; margin-top: 2rem;" class="plink">View Project</p>
+                    </div>
+                    </a>
                     </div>
                 </div>
-                <form action="https://api.web3forms.com/submit" method="POST" class="form flexCol">
-                    <input type="hidden" name="access_key" value="c69deaa1-6b0b-4e8c-8feb-fb0a098c1439">
-                    <div class="dFlex" style="gap: 1.5rem;">
-                        <input type="text" id="" placeholder="Name" name="name" required>
-                        <input type="email" id="" placeholder="Email Address" name="email" required>
-                    </div>
-                    <textarea id="" rows="6" placeholder="Message" name="message" required></textarea>
-                    <button class="submit" type="submit" style="margin-top: 1rem;">Submit</button>
-                </form>
             </div>
         </section>
         
