--- a/index.html
+++ b/index.html
@@ -540,15 +540,15 @@ html {
                                     of expressions and better code by pursuing our “likes”.</p>
                                     <div class="row pt-2">
                                         <div class="col-auto">
-                                            <div class="a-count" data-count="120">
+                                            <div class="a-count" data-count="99">
                                                 <span class="count">0</span>
-                                                <div class="a-count-text">Projects <br>Completed.</div>
+                                                <div class="a-count-text">+Projects <br>Completed.</div>
                                             </div>
                                         </div>
                                         <div class="col-auto">
-                                            <div class="a-count" data-count="100">
+                                            <div class="a-count" data-count="99">
                                                 <span class="count">0</span>
-                                                <div class="a-count-text">Satisfied <br>Clients.</div>
+                                                <div class="a-count-text">+Satisfied <br>Clients.</div>
                                             </div>
                                         </div>
                                     </div>
