--- a/index.html
+++ b/index.html
@@ -542,13 +542,13 @@ html {
                                         <div class="col-auto">
                                             <div class="a-count" data-count="99">
                                                 <span class="count">0</span>
-                                                <div class="a-count-text">+Projects <br>Completed.</div>
+                                                <div class="a-count-text">Projects <br>Completed.</div>
                                             </div>
                                         </div>
                                         <div class="col-auto">
-                                            <div class="a-count" data-count="99">
+                                            <div class="a-count" data-count="85">
                                                 <span class="count">0</span>
-                                                <div class="a-count-text">+Satisfied <br>Clients.</div>
+                                                <div class="a-count-text">Satisfied <br>Clients.</div>
                                             </div>
                                         </div>
                                     </div>
