--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@ html {
                                 <p>Born in 2000, AB type living in USA. We provide on-screen design for websites and
                                     apps, as well as front-end implementation. We will continue to pursue a wide range
                                     of expressions and better code by pursuing our “likes”.</p>
-                                    <div class="row pt-2">
+                                    <div class="row pt-2 projects-Counter">
                                         <div class="col-auto">
                                             <div class="a-count" data-count="99">
                                                 <span class="count">0</span>
