--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
             background: none !important;
             padding: 0 !important;
         }
+        body{
+            overflow-x:hidden !important;
+        }
+        .projects-Counter{
+          flex-wrap: nowrap !important;
+        }
         [data-bs-theme=dark] {
     --px-theme: #4b3f3f !important; /* Warm brown for a cohesive and earthy feel */
     --px-theme-text: #ffe4d4 !important; /* Soft peach for text to bring out skin tones */
