--- a/index.html
+++ b/index.html
@@ -548,13 +548,13 @@ html {
                                         <div class="col-auto">
                                             <div class="a-count" data-count="99">
                                                 <span class="count">0</span>
-                                                <div class="a-count-text">Projects <br>Completed.</div>
+                                                <div class="a-count-text">+Projects <br>Completed.</div>
                                             </div>
                                         </div>
                                         <div class="col-auto">
                                             <div class="a-count" data-count="85">
                                                 <span class="count">0</span>
-                                                <div class="a-count-text">Satisfied <br>Clients.</div>
+                                                <div class="a-count-text">+Satisfied <br>Clients.</div>
                                             </div>
                                         </div>
                                     </div>
@@ -1084,8 +1084,8 @@ html {
                                             <i class="bi-chat-left-dots-fill"></i>
                                         </div>
                                         <div class="text">
-                                            <label>Chat to us</label>
-                                            <p>Our friendly team is there to help. <span><a class="text-reset"
+                                            <label>Chat to me</label>
+                                            <p>i'm always available for your help. <span><a class="text-reset"
                                                         href="mailto:kaleemullahahsan0@gmail.com">kaleemullahahsan0@gmail.com</a></span>
                                             </p>
                                         </div>
@@ -1095,9 +1095,9 @@ html {
                                             <i class="bi-compass"></i>
                                         </div>
                                         <div class="text">
-                                            <label>Visit us</label>
-                                            <p> Come say hello at our office HQ. <span>Warnwe Park Streetperrine, <br>
-                                                    FL 33157 New York City</span></p>
+                                            <label>Visit me</label>
+                                            <p> Come say hello at our office.<span>Pakistan, <br>
+                                                    Dogar Chownk, Kamalia City</span></p>
                                         </div>
                                     </li>
                                     <li>
@@ -1105,8 +1105,8 @@ html {
                                             <i class="bi-phone"></i>
                                         </div>
                                         <div class="text">
-                                            <label>Call us</label>
-                                            <p>Mon-Fri from 8am to 5pm. <span>+01 (555) 000-0000</span></p>
+                                            <label>Call me</label>
+                                            <p>Mon-Fri from 8am to 5pm. <span>+92 321-2411-667</span></p>
                                         </div>
                                     </li>
                                 </ul>
