--- a/index.html
+++ b/index.html
@@ -1130,16 +1130,10 @@ html {
                                     <p role="status" aria-live="polite" aria-atomic="true"></p>
                                     <ul></ul>
                                 </div>
-                                <form action="/demosd/tapsiwp/#wpcf7-f97-o1" method="post" class="wpcf7-form init"
-                                    aria-label="Contact form" novalidate="novalidate" data-status="init">
-                                    <div style="display: none;">
-                                        <input type="hidden" name="_wpcf7" value="97">
-                                        <input type="hidden" name="_wpcf7_version" value="5.7.5.1">
-                                        <input type="hidden" name="_wpcf7_locale" value="en_US">
-                                        <input type="hidden" name="_wpcf7_unit_tag" value="wpcf7-f97-o1">
-                                        <input type="hidden" name="_wpcf7_container_post" value="0">
-                                        <input type="hidden" name="_wpcf7_posted_data_hash" value="">
-                                    </div>
+                                   <form action="https://api.web3forms.com/submit" method="POST">
+
+                                    <!-- Replace with your Access Key -->
+                                    <input type="hidden" name="access_key" value="c69deaa1-6b0b-4e8c-8feb-fb0a098c1439">
                                     <div id="contact-form">
                                         <div class="row gx-3 gy-4">
                                             <div class="col-md-6">
