--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@ html {
                                         </div>
                                         <div class="text">
                                             <label>Visit me</label>
-                                            <p> Come say hello at our office.<span>Pakistan, <br>
+                                            <p> Come say hello at our office.<span>Punjab Pakistan, <br>
                                                     Dogar Chownk, Kamalia City</span></p>
                                         </div>
                                     </li>
