--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@ html {
                 font-size: 18px;
                 padding-right: 7px;
             }
+        .projects-Counter{
+            over-flow: hidden !important;
+        }
     </style>
     <style id="global-styles-inline-css" type="text/css">
         :root {
