--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         body{
             overflow-x:hidden !important;
         }
-        .projects-Counter{
+        .projects-Counter, .services-section{
           flex-wrap: nowrap !important;
         }
         [data-bs-theme=dark] {
