--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ html {
                 padding-right: 7px;
             }
         .projects-Counter, .services-section{
-            over-flow: hidden !important;
+            overflow: hidden !important;
         }
     </style>
     <style id="global-styles-inline-css" type="text/css">
