--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@ html {
           100% { transform: rotate(0deg); }
         }
         
-        .wave-emoji {
-          margin-right: 12px;
+        body .wave-emoji {
+          margin-right: 7px !important;
           display: inline-block;
           animation: wave 2s infinite ease-in-out;
           transform-origin: 70% 70%; /* Adjusted origin to look more natural */
