--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
+    <meta name="google-site-verification" content="_9gPOYcQyJrUxeKCnyh1M2eQeFt_XvP77PTq04O0g5c" />
     <link rel="icon" href="media/favicon.svg">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
