--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <meta name="google-site-verification" content="_9gPOYcQyJrUxeKCnyh1M2eQeFt_XvP77PTq04O0g5c" />
+    
     <link rel="icon" href="media/favicon.svg">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -109,7 +109,7 @@ html {
                 margin: .5rem 0;
                 font-size: 20px !important;
                 text-transform: uppercase;
-                padding: 1rem;
+                padding: 1rem ;
                 font-weight: 600;
                 color: #f1e0da !important;
             }
@@ -475,6 +475,7 @@ html {
     <script type="text/javascript"
         src="https://shtheme.com/demosd/tapsiwp/wp-includes/js/jquery/jquery.min.js?ver=3.7.1"
         id="jquery-core-js"></script>
+    <meta name="google-site-verification" content="_9gPOYcQyJrUxeKCnyh1M2eQeFt_XvP77PTq04O0g5c" />
 </head>
 
 <body class="fixed-header">
@@ -495,7 +496,7 @@ html {
     </header>
     <div class="header-left-fixed one-page-nav">
         <div class="logo">
-           <a class="navbar-brand mylogo" href="https://ahsanresume.netlify.app/">
+           <a class="navbar-brand mylogo" href="https://ahsanresume.netlify.app/" style="font-size: 16px !important;">
                 <i class="bi bi-asterisk"></i>
                     Ahsan
             </a>
