--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@ html {
                             </div>
                             <div class="about-me-text pb-5">
                                 <h3>My Name Is Kaleemullah Ahsan</h3>
-                                <h5><span>I’m available for front-end development projects, turning UI/UX designs into interactive, responsive websites.</h5>
+                                <h5><span>I’m available for front-end development projects with Resonsive Designs</h5>
                                 <p>Born in 2004, type AB, living in Kamalia. I provide on-screen design for websites and apps, along with front-end development. I’m dedicated to exploring a wide range of creative expressions and writing better code by following my passions.</p>
                                     <div class="row pt-2 projects-Counter">
                                         <div class="col-auto">
