--- a/index.html
+++ b/index.html
@@ -849,8 +849,7 @@ html {
                                             <div class="col-lg-5 pt-4 pt-lg-0">
                                                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close" style="float: right;"></button>
                                                 <h4>Website Design for Marketing Agency Startup</h4>
-                                                <p class="mb-3">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                                                <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                                                <p class="mb-3">Fotawp is a modern and dynamic website designed for a startup marketing agency, focusing on delivering a seamless user experience. The design incorporates a clean layout, vibrant visuals, and intuitive navigation to effectively showcase the agency's services. Utilizing responsive design principles, Fotawp ensures accessibility across various devices, enhancing user engagement. The project emphasizes the agency's brand identity and mission, ultimately aimed at attracting potential clients and establishing a strong online presence.</p>
                                                 <div class="about-content">
                                                     <ul>
                                                         <li class="d-flex">
@@ -867,11 +866,11 @@ html {
                                                         </li>
                                                         <li class="d-flex">
                                                             <span class="col-4 col-lg-3">Country:</span>
-                                                            <span>USA</span>
+                                                            <span>Pakistan</span>
                                                         </li>
                                                         <li class="d-flex">
                                                             <span class="col-4 col-lg-3">Live URL:</span>
-                                                            <span>www.example.com</span>
+                                                            <span>https://kaleemullahahsan.github.io/Fotawp/</span>
                                                         </li>
                                                     </ul>
                                                 </div>
