--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@ html {
                                     <h6>Fota Wp Services Agency</h6>
                                     <p>Web App, WordPress Theme</p>
                                     <a class="gallery-link"
-                                        href="media/Fotawp.png">
+                                        href="https://kaleemullahahsan.github.io/Fotawp/">
                                         <i class="bi-arrow-up-right-circle"></i>
                                     </a>
                                 </div>
