--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@ html {
                                             <div class="col-lg-5 pt-4 pt-lg-0">
                                                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close" style="float: right;"></button>
                                                 <h4>Website Design for Marketing Agency Startup</h4>
-                                                <p class="mb-3">Fotawp is a modern and dynamic website designed for a startup marketing agency, focusing on delivering a seamless user experience. The design incorporates a clean layout, vibrant visuals, and intuitive navigation to effectively showcase the agency's services. Utilizing responsive design principles, Fotawp ensures accessibility across various devices, enhancing user engagement. The project emphasizes the agency's brand identity and mission, ultimately aimed at attracting potential clients and establishing a strong online presence.</p>
+                                                <p class="mb-3">Fotawp is a sleek, responsive website designed for a marketing agency startup. Featuring a clean layout and vibrant visuals, it enhances user experience while showcasing the agency's services effectively. The design emphasizes brand identity, aiming to attract potential clients and establish a strong online presence.</p>
                                                 <div class="about-content">
                                                     <ul>
                                                         <li class="d-flex">
@@ -867,10 +867,6 @@ html {
                                                         <li class="d-flex">
                                                             <span class="col-4 col-lg-3">Country:</span>
                                                             <span>Pakistan</span>
-                                                        </li>
-                                                        <li class="d-flex">
-                                                            <span class="col-4 col-lg-3">Live URL:</span>
-                                                            <span>https://kaleemullahahsan.github.io/Fotawp/</span>
                                                         </li>
                                                     </ul>
                                                 </div>
