--- a/index.html
+++ b/index.html
@@ -822,7 +822,6 @@ html {
                                 </div>
                             </div>
                         </div>
-
                         <!-- Full-Width Modal Structure -->
                         <div class="modal fade" id="project_1" tabindex="-1" aria-labelledby="project1Label"
                             aria-hidden="true">
@@ -854,7 +853,7 @@ html {
                                                     <ul>
                                                         <li class="d-flex">
                                                             <span class="col-4 col-lg-3">Type:</span>
-                                                            <span>Website</span>
+                                                            <span>Front-End Development, WordPress Theme</span>
                                                         </li>
                                                         <li class="d-flex">
                                                             <span class="col-4 col-lg-3">Langages:</span>
