--- a/index.html
+++ b/index.html
@@ -800,12 +800,12 @@ html {
                     </h3>
                 </div>
                 <div class="lightbox-gallery">
-                                        <div class="row g-3 g-lg-4 portfolio-content" >
+                    <div class="row g-3 g-lg-4 portfolio-content" >
                         <div class="grid-item col-md-4" style="position: relative;">
                             <div class="portfolio-box">
                                 <div class="portfolio-text">
                                     <h6>Fota Wp Services Agency</h6>
-                                    <p>Web App, WordPress Theme</p>
+                                    <p>Front-End Development, WordPress Theme</p>
                                     <a class="gallery-link"
                                         href="https://kaleemullahahsan.github.io/Fotawp/">
                                         <i class="bi-arrow-up-right-circle"></i>
@@ -853,7 +853,7 @@ html {
                                                     <ul>
                                                         <li class="d-flex">
                                                             <span class="col-4 col-lg-3">Type:</span>
-                                                            <span>Front-End Development, WordPress Theme</span>
+                                                            <span>Front-End, WordPress Theme</span>
                                                         </li>
                                                         <li class="d-flex">
                                                             <span class="col-4 col-lg-3">Langages:</span>
