--- a/index.html
+++ b/index.html
@@ -826,7 +826,7 @@ html {
                     <div class="modal fade" id="project_1" tabindex="-1" aria-labelledby="project1Label"
                         aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered modal-xl">
-                            <div class="modal-content" style="background-color: #1d1a1a; color: #fff;">
+                            <div class="modal-content" style="background-color: var(--bs-black); color: #fff;">
                                 <div class="modal-body">
                                     <div class="row align-items-start">
                                         <div class="col-lg-7">
@@ -907,7 +907,7 @@ html {
                     <div class="modal fade" id="project_2" tabindex="-1" aria-labelledby="project2Label"
                         aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered modal-xl">
-                            <div class="modal-content" style="background-color: #1d1a1a; color: #fff;">
+                            <div class="modal-content" style="background-color:  var(--bs-black); color: #fff;">
                                 <div class="modal-body">
                                     <div class="row align-items-start">
                                         <div class="col-lg-7">
@@ -989,7 +989,7 @@ html {
                     <div class="modal fade" id="project_3" tabindex="-1" aria-labelledby="project3Label"
                         aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered modal-xl">
-                            <div class="modal-content" style="background-color: #1d1a1a; color: #fff;">
+                            <div class="modal-content" style="background-color:  var(--bs-black); color: #fff;">
                                 <div class="modal-body">
                                     <div class="row align-items-start">
                                         <div class="col-lg-7">
@@ -1072,7 +1072,7 @@ html {
                     <div class="modal fade" id="project_4" tabindex="-1" aria-labelledby="project4Label"
                         aria-hidden="true">
                         <div class="modal-dialog modal-dialog-centered modal-xl">
-                            <div class="modal-content" style="background-color: #1d1a1a; color: #fff;">
+                            <div class="modal-content" style="background-color:  var(--bs-black); color: #fff;">
                                 <div class="modal-body">
                                     <div class="row align-items-start">
                                         <div class="col-lg-7">
